@@ -1,3 +1,7 @@
 #!/bin/bash
 
-# Lancement de la classe Main
+#Run Main
+java --module-path lib:modules      \
+     --add-modules org.common.test  \
+      -m junit/org.junit.runner.JUnitCore common.math.test.CalculatriceTest
+
